Make long section names wrap correctly and pad better

--- a/gui/app/styles/view/document/doc-structure.scss
+++ b/gui/app/styles/view/document/doc-structure.scss
@@ -7,7 +7,7 @@
 	margin: 0 0 0 0;
 
 	> .page-header {
-		margin: 0 0 0.7rem 0;
+		margin: 0 0 2rem 0;
 
 		> .page-number {
 			color: $color-gray;
@@ -29,7 +29,7 @@
 		}
 
 		> .page-title {
-			display: inline-block;
+			display: inline;
 			font-size: 2.0rem;
 			font-weight: bold;
 			margin: 16px 0;
